--- a/di-20-zhang-yu-le-yu-jiao-yu/20.4-steam.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/20.4-steam.md
@@ -157,3 +157,29 @@ vfs.usermount=1
 $ /usr/local/steam-utils/bin/lsu-bootstrap
 ```
 
+#### 允许 test 访问 X11
+
+在你登录桌面的用户的权限下执行（我是 `ykla`）：
+
+
+```sh
+$ xhost +SI:localuser:test
+```
+
+#### 启动 steam
+
+- 切换到 test 用户：
+
+
+```sh
+# su test
+```
+
+- 启动 steam
+
+```sh
+$ /usr/local/steam-utils/bin/steam
+```
+
+
+
