--- a/di-20-zhang-yu-le-yu-jiao-yu/20.4-steam.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/20.4-steam.md
@@ -1,4 +1,4 @@
-# 20.4 Steam
+![image](https://github.com/user-attachments/assets/61c3c3e8-6ff7-4f9f-9d55-bb8c56df6337)# 20.4 Steam
 
 ## 基于 Port `games/linux-steam-utils`
 
@@ -181,5 +181,44 @@ $ xhost +SI:localuser:test
 $ /usr/local/steam-utils/bin/steam
 ```
 
+输入用户名和密码登录：
 
+![Steam in FreeBSD](../.gitbook/assets/steam1.png)
 
+加载中：
+
+![Steam in FreeBSD](../.gitbook/assets/steam2.png)
+
+设置中文界面：
+
+![Steam in FreeBSD](../.gitbook/assets/steam3.png)
+
+Steam：
+
+![Steam in FreeBSD](../.gitbook/assets/steam4.png)
+
+#### 测试游戏 Beholder
+
+>**技巧**
+>
+>Beholder 是收费游戏。若想玩，你需要自行购买。
+
+下载 Beholder：
+
+![Beholder in FreeBSD](../.gitbook/assets/steam5.png)
+
+启动 Beholder：
+
+![Beholder in FreeBSD](../.gitbook/assets/steam6.png)
+
+![Beholder in FreeBSD](../.gitbook/assets/steam7.png)
+
+#### 故障排除
+
+- `Bubblewrap doesn't work on FreeBSD. Select LSU chroot or Legacy Runtime in the game compatibility settings.`
+
+右键单击游戏，点击兼容性，勾选“强制使用特定 Steam Play 兼容性工具”，选择“Legacy Runtime 1.0”。
+
+- 没中文字体
+
+待解决
