chore: sync headers with SUMMARY.md

--- a/di-20-zhang-yu-le-yu-jiao-yu/20.4-steam.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/20.4-steam.md
@@ -1,4 +1,4 @@
-![image](https://github.com/user-attachments/assets/61c3c3e8-6ff7-4f9f-9d55-bb8c56df6337)# 20.4 Steam
+# 20.4 Steam
 
 ## 基于 Port `games/linux-steam-utils`
 
