--- a/di-20-zhang-yu-le-yu-jiao-yu/20.4-steam.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/20.4-steam.md
@@ -166,7 +166,7 @@ $ /usr/local/steam-utils/bin/lsu-bootstrap
 $ xhost +SI:localuser:test
 ```
 
-#### 启动 steam
+### 启动 steam
 
 - 切换到 test 用户：
 
@@ -197,7 +197,7 @@ Steam：
 
 ![Steam in FreeBSD](../.gitbook/assets/steam4.png)
 
-#### 测试游戏 Beholder
+### 测试游戏 Beholder
 
 >**技巧**
 >
@@ -213,7 +213,7 @@ Steam：
 
 ![Beholder in FreeBSD](../.gitbook/assets/steam7.png)
 
-#### 故障排除
+### 故障排除
 
 - `Bubblewrap doesn't work on FreeBSD. Select LSU chroot or Legacy Runtime in the game compatibility settings.`
 
