--- a/di-20-zhang-yu-le-yu-jiao-yu/20.4-steam.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/20.4-steam.md
@@ -120,7 +120,7 @@ vfs.usermount=1
 # sysrc kld_list+="nullfs"
 ```
 
-#### 为 Steam 创建一个专用的 FreeBSD 非 wheel 用户账户，并切换至该用户。
+#### 为 Steam 创建专用的用户账户
 
 >**注意**
 >
