Update README with installation instructions
Added a new section to the README file detailing the steps required to install the project dependencies and set up the development environment.

--- a/di-1-zhang-zou-jin-freebsd/1.3-about-bsd.md
+++ b/di-1-zhang-zou-jin-freebsd/1.3-about-bsd.md
@@ -25,7 +25,7 @@ alpha 是 current 进入 release 的第一步。具体过程是 current --> alph
 current 相对稳定后（即 MFC 最短三天，MFC 即 `Merge From Head`，类似向后移植 `backporting`）会推送到 stable，但是不保证二者没有大的 bug。参见 [FreeBSD Release Engineering](https://docs.freebsd.org/en/articles/freebsd-releng/)。
 
 
-![FreeBSD 版本更迭](../.gitbook/assets/bsd-release.svg)
+![FreeBSD 版本更迭](../.gitbook/assets/bsd-release.png)
 
 
 >**注意**
@@ -39,7 +39,7 @@ current 相对稳定后（即 MFC 最短三天，MFC 即 `Merge From Head`，类
 
 ## FreeBSD 开发模型
 
-![](../.gitbook/assets/model.svg)
+![](../.gitbook/assets/model.png)
 
 ### 存储库
 
