--- a/di-14-zhang-wang-luo-guan-li/di-14.3-jie-usb-rndis-usb-wang-luo-gong-xiang.md
+++ b/di-14-zhang-wang-luo-guan-li/di-14.3-jie-usb-rndis-usb-wang-luo-gong-xiang.md
@@ -4,7 +4,7 @@
 
 对于大多数新款安卓手机，可以实现在开启 WiFi 关闭流量的同时供给以太网给 FreeBSD。这样就不会消耗流量了：
 
-![](../.gitbook/assets/tethering.svg)
+![](../.gitbook/assets/tethering.png)
 
 >**技巧**
 >
