Add multi-owner and scraping guides to OpenList section
Added documentation for managing multi-owner permissions on local storage using bindfs and introduced a guide for media scraping with inotify-tools and zsh in the OpenList section. Updated CHANGELOG and included relevant screenshots to illustrate the new features.

Co-Authored-By: safreya <18192796+safreya@users.noreply.github.com>

--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-alist.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-alist.md
@@ -193,6 +193,142 @@ $ update-desktop-database ~/.local/share/applications
 $ xdg-mime default userapp-vlc.desktop x-scheme-handler/vlc
 ```
 
+## 本机存储的多属主权限管理
+
+以普通用户身份运行服务是一种安全的方式，如上文使用了用户 ykla。
+
+有这样的一种情况，在 OpenList 中挂载的本地目录及其子目录和文件属主并非 ykla：如通过 http 服务上传的目录及文件，通过以 daemon 方式运行的 aria2 或 qBitTorrent 下载的目录及文件，还有其它各种情况。这时访问这些目录及其子目录和文件可能会存在权限问题。
+
+常用的解决方案：
+
+- 通过设置（组和其他）访问权限使 OpenList 的运行用户可以访问。
+
+- 一开始就规划好，使各种可能的服务都使用同一个用户运行，但这个方法比较麻烦，也会让各种服务的专有文件失去隔离性。
+
+上面的方案在属主不同的情况比较少的时候还是可以的，情况多了就不太方便。这时使 bindfs 就比较方便。
+
+Bindfs 类似于 nullfs，但在挂载目标目录到其他位置时，你可以覆盖文件的所有权。
+
+### 安装 bindfs
+
+- 使用 pkg 安装：
+
+```sh
+# pkg install fusefs-bindfs
+```
+
+- 使用 Ports 安装：
+
+```sh
+# cd /usr/ports/filesystems/bindfs/
+# make install clean
+```
+
+测试用例：
+
+- 以普通用户权限运行
+
+```sh
+$ mkdir -p /home/ykla/extdata/wwwupload 
+```
+
+- 以 root 用户权限运行
+
+```sh
+# bindfs -u ykla -g ykla /var/www/upload /home/ykla/extdata/wwwupload
+```
+
+这里 `/var/www/upload` 的属主是 `www`。
+
+该命令将 `/var/www/upload` 挂载到了 `/home/ykla/extdata/wwwupload`。
+
+用户 ykla 在访问 `/var/www/upload` 时目录下的目录和文件属主维持不变（仍是 `www`）， 访问 `/home/ykla/extdata/wwwupload `时目录下的目录和文件属主都认为是 `ykla`。这时 OpenList 只要用本机存储挂载 `/home/ykla/extdata/wwwupload` 即可轻松解决访问权限问题。
+
+也可以用 `--map` 选项，使用类似于 NFS 的 UID/GID 映射机制（用于将某些用户/组映射成其他的用户/组），这在某些时候可能是更好的选择。
+
+#### 参考文献
+
+- 具体用法参考[bindfs](https://man.freebsd.org/cgi/man.cgi?query=bindfs)
+
+## 影视刮削
+
+此方案使用 zsh，请自行安装。
+
+此处的刮削意指获取本地多媒体文件的相关信息，如海报，制作人信息，配音，字幕等周边内容。
+
+OpenList 未内置原生的刮削功能。
+
+但是利用好 OpenList 的 markdown（`top.md`、`bottom.md`、`readme.md`）就能提供简单的刮削功能。
+
+### 使用 inotify-tools 监控目录
+
+inotify-tools 为 shell 脚本提供了用于文件系统事件的简单接口。
+
+#### 安装 inotify-tools
+
+- 使用 pkg 安装：
+
+```sh
+# pkg ins inotify-tools
+```
+
+- 还可以使用 Ports 安装：
+
+```sh
+# cd /usr/ports/sysutils/inotify-tools/ 
+# make install clean
+```
+
+#### 监按脚本
+
+```sh
+#!/usr/bin/zsh
+
+zmodload zsh/datetime
+
+WATCH_DIR="/home/ykla/extdata/media"
+EVENTS="create,moved_to" # 监控事件类型
+ACTION_SCRIPT="/home/ykla/searchtmdb.zsh" # 刮削脚本位置
+
+inotifywait -m -r --format "%w%f %e" -e "$EVENTS" "$WATCH_DIR"| while read -r target event
+do
+        timestamp=$(strftime '%F %T')
+        echo "[${timestamp}]${event}:${target}" >>dir.log
+        echo "${event}"|grep -q 'ISDIR'
+        if [[ $? == 0 ]];then
+           zsh "$ACTION_SCRIPT" >>dir.log
+        fi
+done
+```
+
+在后台启用监控脚本
+
+```sh
+$ nohup  ./monitor.zsh &
+```
+
+或
+
+```sh
+$ ./monitor.zsh & # 这里按回车，再输入下面的 disown
+disown # 从 shell 分离进程
+```
+#### 参考文献
+
+- inotifywait 用法参见[inotifywait](https://man.freebsd.org/cgi/man.cgi?query=inotifywait&apropos=0)
+
+### 写入刮削的信息
+
+将刮削的信息写入视频所在目录下的 `top.md` 等文件。
+
+tmdb 在国内是可用的，但会受到 dns 污染，解决 dns 污染即可。具体刮削脚本参见 <https://gist.github.com/ykla/91e27db14e68ba60903e97fe1c437246>。
+
+效果如下：
+
+![OpenList in FreeBSD](../.gitbook/assets/117942012257041.png)
+
+![OpenList in FreeBSD](../.gitbook/assets/118342012277207.png)
+
 ## 故障排除与未竟事宜
 
 ### 日志
