Refactor bindfs usage explanation and formatting
Combined sentences about bindfs for clarity and adjusted the heading for the test case section to improve readability.

Co-Authored-By: safreya <18192796+safreya@users.noreply.github.com>

--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-alist.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-alist.md
@@ -205,9 +205,7 @@ $ xdg-mime default userapp-vlc.desktop x-scheme-handler/vlc
 
 - 一开始就规划好，使各种可能的服务都使用同一个用户运行，但这个方法比较麻烦，也会让各种服务的专有文件失去隔离性。
 
-上面的方案在属主不同的情况比较少的时候还是可以的，情况多了就不太方便。这时使 bindfs 就比较方便。
-
-Bindfs 类似于 nullfs，但在挂载目标目录到其他位置时，你可以覆盖文件的所有权。
+上面的方案在属主不同的情况比较少的时候还是可以的，情况多了就不太方便。这时使 bindfs 就比较方便。Bindfs 类似于 nullfs，但在挂载目标目录到其他位置时，你可以覆盖文件的所有权。
 
 ### 安装 bindfs
 
@@ -224,7 +222,7 @@ Bindfs 类似于 nullfs，但在挂载目标目录到其他位置时，你可以
 # make install clean
 ```
 
-测试用例：
+### 测试用例
 
 - 以普通用户权限运行
 
