--- a/di-21-zhang-linux-jian-rong-ceng/di-21.9-jie-linux-jian-rong-ceng-ji-yu-slackware-linux.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.9-jie-linux-jian-rong-ceng-ji-yu-slackware-linux.md
@@ -16,7 +16,7 @@ export DIST_FULLNAME=Slackware
 VER=15.0
 FILE=${DIST}64-${VER}.tar.xz
 SUBDIR=""
-URL=https://book.bsdcn.org
+URL=https://book.bsdcn.org # 此处要改成你自己的文件所在链接
 UPDATE_CMD="slackpkg update"
 UPGRADE_CMD="slackpkg upgrade-all"
 INSTALL_CMD="slackpkg install"
