--- a/di-14-zhang-wang-luo-guan-li/di-14.4-jie-tcp-bbr.md
+++ b/di-14-zhang-wang-luo-guan-li/di-14.4-jie-tcp-bbr.md
@@ -60,9 +60,15 @@ TCP BBR 是 Google 开发的一种拥塞控制算法。作用有两个：
 
 若输出结果为 `net.inet.tcp.functions_default: bbr`，则 TCP BBR 启用成功。
 
+## 参考文献
+
+- [netflix/tcplog_dumper](https://github.com/netflix/tcplog_dumper)
+
 
 ## 故障排除与未竟事宜
 
-故障排除与未竟事宜等事宜请参考：
+### 内网速度良好但互联网速度不佳
 
-[netflix/tcplog_dumper](https://github.com/netflix/tcplog_dumper)
+RACK 和 BBR 均在内网表现良好，均优于默认堆栈。但是其在互联网上均表现不佳：RACK 互联网速度只有默认堆栈的约三分之一，BBR 则为默认堆栈速度的六分之一。
+
+应该是可以调的，待解决。
