--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-alist.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-alist.md
@@ -172,7 +172,7 @@ vlc "$clean_url"
 $ chmod u+x ~/.local/share/applications/vlc-noschema.sh
 ```
 
-新建 `.desktop` 文件，以便 xdg-open 调用上面的脚本：
+新建 `userapp-xxx.desktop`（你只可改动字段 `xxx` 为你想要的名字，其他字段不可改变。如 `userapp-abc.desktop`）文件，以便 xdg-open 调用上面的脚本：
 
 ```sh
 safreya ~ % cat ~/.local/share/applications/userapp-vlc.desktop
